
syntax = "proto3";
package balancerapi;

option java_multiple_files = true;

service BalancerSvc {
  // The signature is a bit confusing, note that:
  // - work assignments are sent first, and work ack is the response
  // - there is 1 ack for 1 assignment (barring hard crashes)
  rpc work (stream WorkAcknowledgement) returns (stream WorkAssignment);
}

//message WorkerAvailability {
//  string name = 1;
//}

message WorkAcknowledgement {
  uint64 task_id = 1;
  // if error is empty then it was successful
  string error = 2;
}

//message WorkRequest {
//  oneof request {
//    WorkerAvailability availability = 1;
//    WorkAcknowledgement ack = 2;
//  }
//}

message WorkAssignment {
  uint64 task_id = 1;
  uint64 idempotency_id = 3;
  string postzegel_code = 2;
}
